feat: add tasks list and timeline

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,100&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./assets/fontawesome/css/all.min.css">
   <title>React App</title>
 </head>
